--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ version: 0.2.0
 homepage: https://github.com/valerycolong/vcard
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   validators: ^3.0.0
   path: ^1.8.0
-  intl: ^0.18.0
+  intl: ^0.19.0
   meta: ^1.7.0
 
 dev_dependencies:
